# attitude_estimation

./: .gitignore  README.md
raspi_zero_w/bmx055/: bmx055.py
raspi_zero_w/bmx055/host/: main.py  pyproject.toml
