[tool.poetry]
name = "attitude_estimation"
version = "0.1.0"
description = "estimate attitude with micon or raspi"
authors = ["morutole"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
paramiko = "^2.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
